<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.GetStartedActivity">

        <TextView
            android:id="@+id/txt_get_started_mars"
            android:layout_width="167dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="25sp"
            android:text="@string/mars_estate"
            android:textAppearance="@style/mars_estate"
            android:translationY="-12.64sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_get_started"
            android:layout_width="335dp"
            android:layout_height="162dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/nunito"
            android:gravity="top"
            android:text="@string/let_s_explo"
            android:textAppearance="@style/let_s_explo"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_get_started_mars" />


        <ImageView
            android:id="@+id/img_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_get_started"
            app:srcCompat="@drawable/get_started_image"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/btn_get_started"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/get_starterd_rectangle"
            android:elevation="400dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/get_started"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_get_started" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>